    The button is right next to the new SQL tab button.

- Patch #67 Session tab tooltip now shows the connections JDBC-URL.

- Patch #68 The "Copy as INSERT / UPDATE statement" functions now provide the right table name
    when copying from a content tab.

Bug fixes:

- Patch #69 Fixing problem with long running "getTypesInfo" on Postgres.



3.5.3 (05/11/2014)
==================

Enhancements:
#469 Show selected row count (like result row count)

#490 Continue offering MS Exel XLS (older file format) export.
  Users can now choose between XLSX and XLS.

Bug fixes:

#1144 Error exporting null valued boolean/bit cols to XLS/XLSX
#1143 Error exporting null valued date cols to XLS/XLSX

Reintroduced compatibility with Java 1.6

#1137 ArrayIndexOutOfBoundsException when querying PostGIS geometry columns
Thanks to Jaroslaw Jarmolowicz for the patch


#1129 Export table to XLSX does not work / #1129 Export table to XLSX does not work --> Export broke on null values
#1135 Export of date/time values to XLSX exports number instead of date

#1132 keyboard shortcut alt-down/alt-up not working

Hibernate Plugin: HQL queries that returned results with enum types used to lead to unmarshall exceptions.




3.5.2 (03/15/2014)
==================

Note: Automatic updates were disabled. Please use our home page to download latest versions and snapshots.

Enhancements:

- SQLFilter tab can support custom operators and functions depending on column type
- Improved loading of content tab for tables with big data
- Added support for postgres UUID-s
- Added support for postgres arrays
- Added support for postgis Geometry (requires postgis.jar added to driver classpath).
  Geometries are presented and edited as WKT. WKT is more human readable and allows quick editing.
  Content tab displays summary (containing only: type, center point, and total number of vertexes)
  that is lazy loaded and substituted, with full content, when given cell is clicked.